Ajustado layout do componente bebum e retirado obrigatoriedade dos campos que foram alterados essa propriedade.

--- a/src/app/pagamento/components/pendura/bebum/bebum.component.html
+++ b/src/app/pagamento/components/pendura/bebum/bebum.component.html
@@ -1,4 +1,3 @@
-<h3 class="text-center text-muted">Selecionar bêbum</h3>
 <form [formGroup]="bebumForm">
   <div class="form-group row mt-1">
     <label class="col-2 col-form-label">Nome*</label>
@@ -10,11 +9,10 @@
     </div>
   </div>
   <div class="form-group row mt-1">
-    <label class="col-2 col-form-label">Apelido*</label>
+    <label class="col-2 col-form-label">Apelido</label>
     <div class="col-10">
       <input class="form-control" formControlName="apelido" type="text" placeholder="Silvio Santos">
-      <app-vm-error [text]="'O campo Apelido é obrigatório'" *ngIf="bebumForm.get('apelido').hasError('required')"></app-vm-error>
-      <app-vm-error [text]="'O campo Apelido deve conter no mínimo 3 caractes'" *ngIf="bebumForm.get('apelido').hasError('minlength')"></app-vm-error>
+      <app-vm-error [text]="'O campo Apelido deve conter no mínimo 2 caractes'" *ngIf="bebumForm.get('apelido').hasError('minlength')"></app-vm-error>
       <app-vm-error [text]="'O campo Apelido deve conter no maxímo 50 caractes'" *ngIf="bebumForm.get('apelido').hasError('maxlength')"></app-vm-error>
     </div>
   </div>
@@ -27,23 +25,25 @@
     </div>
   </div>
   <div class="form-group row mt-1">
-    <label class="col-2 col-form-label">Telefone*</label>
+    <label class="col-2 col-form-label">Celular</label>
     <div class="col-10">
-      <input class="form-control" formControlName="telefone" mask="(00) 000-000000" placeholder="(00) 000-000000">
-      <app-vm-error [text]="'O campo Telefone é obrigatório'" *ngIf="bebumForm.get('telefone').hasError('required')"></app-vm-error>
-      <app-vm-error [text]="'O campo Telefone deve conter no mínimo 10 números'" *ngIf="bebumForm.get('telefone').hasError('minlength')"></app-vm-error>
+      <input class="form-control" formControlName="telefone" mask="(00) 00000-0000" placeholder="(00) 00000-0000">
+      <app-vm-error [text]="'O campo Celular deve conter no mínimo 10 números'" *ngIf="bebumForm.get('telefone').hasError('minlength')"></app-vm-error>
     </div>
   </div>
-  <div class="row">
-    <span class="col-sm ml-0">
-      <button type="button" (click)="close()" class="btn btn-danger col-sm ml-0">Cancelar</button>
-    </span>
-    <span class="tool-tip col-sm ml-0" data-toggle="tooltip" data-placement="bottom" title="A busca de bebum é pelo CPF do indivíduo">
-      <button type="button" [disabled]="bebumForm.get('cpf').errors" (click)="retriveBebum(bebumForm.get('cpf').value)"
-        class="btn btn-success col-sm ml-0">
+  <div class="col-md-12 p-0 pt-3 footer">
+    <div class="tool-tip" data-toggle="tooltip" data-placement="bottom" title="A busca de bebum é pelo CPF do indivíduo" [hidden]="hideButtonSearch">
+      <button type="button" [disabled]="bebumForm.get('cpf').errors" (click)="retriveBebum(bebumForm.get('cpf').value)" class="btn btn-success col-12 m-0">
         Buscar
       </button>
-    </span>
+    </div>
+    <div class="row">
+      <div class="col-6">
+        <button type="button" (click)="close()" class="btn btn-danger col-md-12 ml-0">Cancelar</button>
+      </div>
+      <div class="col-6">
+        <button type="button" (click)="selecionarCliente()" [disabled]="bebumForm.invalid" class="btn btn-primary col-md-12 ml-0">Confirmar</button>
+      </div>
+    </div>
   </div>
-  <button type="button" (click)="selecionarCliente()" [disabled]="bebumForm.invalid" class="btn btn-primary col-sm ml-0 mr-0">Confirmar</button>
 </form>
