--- a/src/app/pagamento/components/pendura/bebum/bebum.component.scss
+++ b/src/app/pagamento/components/pendura/bebum/bebum.component.scss
@@ -1,4 +1,8 @@
-
 .tool-tip [disabled] {
   pointer-events: none;
+}
+.footer{
+  border-top: 1px solid #e9ecef;
+  border-bottom-left-radius: .3rem;
+  border-bottom-right-radius: .3rem;
 }
