Ajustado componente bebeum para adicionar funcionalidade de cancelar operação.

--- a/src/app/pagamento/components/pendura/bebum/bebum.component.html
+++ b/src/app/pagamento/components/pendura/bebum/bebum.component.html
@@ -39,7 +39,7 @@
     </div>
     <div class="row">
       <div class="col-6">
-        <button type="button" (click)="close()" class="btn btn-danger col-md-12 ml-0">Cancelar</button>
+        <button type="button" (click)="cancelar()" class="btn btn-danger col-md-12 ml-0">Cancelar</button>
       </div>
       <div class="col-6">
         <button type="button" (click)="selecionarCliente()" [disabled]="bebumForm.invalid" class="btn btn-primary col-md-12 ml-0">Confirmar</button>
