--- a/src/app/pagamento/components/pagamento/pagamento.component.html
+++ b/src/app/pagamento/components/pagamento/pagamento.component.html
@@ -91,6 +91,6 @@
     <h5 class="modal-title">Selecionar bêbum</h5>
   </div>
   <div class="modal-body pl-0 pr-0">
-    <app-bebum (closeModalBebum)="pendurar($event)" (cancelarOperacao)="fecharModal()" [cliente]="cliente"></app-bebum>
+    <app-bebum (closeModalBebum)="pendurar($event)" (cancelarOperacao)="fecharModal()" [cliente]="cliente" operacaoDesejada="Pendura"></app-bebum>
   </div>
 </ngx-smart-modal>
