Adicionado chamada ao componente produto, para exibir o formulário de cadastro de produto, a partir do componente gerência de produtos.

--- a/src/app/venda/components/gerencia-produtos/gerencia-produtos.component.html
+++ b/src/app/venda/components/gerencia-produtos/gerencia-produtos.component.html
@@ -43,11 +43,11 @@
   </div>
 </div>
 
-<ngx-smart-modal #produtoModal identifier="produtoModal" customClass="medium-modal">
+<ngx-smart-modal #produtoModal identifier="produtoModal">
   <div class="modal-header pt-0 pl-0 pr-0">
     <h5 class="modal-title">Cadastrar produto</h5>
   </div>
   <div class="modal-body pl-0 pr-0">
-    Corpo modal
+    <app-produto [produto]="produto" (cancelOperation)="fecharModal()"></app-produto>
   </div>
 </ngx-smart-modal>
