--- a/src/app/venda/components/produto/produto.component.html
+++ b/src/app/venda/components/produto/produto.component.html
@@ -50,7 +50,7 @@
     </div>
   </div>
   <!--Botões para confirmar ou cancelar a operação-->
-  <div class="col-md-12 p-0 pt-3 footer">
+  <div class="col-md-12 p-0 pt-3 line-modal-footer">
     <div class="row">
       <div class="col-6">
         <button type="button" (click)="cancel()" class="btn btn-danger col-md-12 ml-0">Cancelar</button>
