--- a/src/app/venda/components/gerencia-produtos/gerencia-produtos.component.html
+++ b/src/app/venda/components/gerencia-produtos/gerencia-produtos.component.html
@@ -30,7 +30,7 @@
           </tr>
         </thead>
         <tbody>
-          <tr *ngFor="let produto of produtos$ | async | produto : [termoPesquisaProduto]; let i = index ">
+          <tr *ngFor="let produto of produtos | produto : [termoPesquisaProduto]; let i = index ">
             <td>{{produto.codigo}}</td>
             <td>{{produto.nome}}</td>
             <td class="text-center">{{produto.quantidadeEstoque}}</td>
@@ -48,6 +48,6 @@
     <h5 class="modal-title">Cadastrar produto</h5>
   </div>
   <div class="modal-body pl-0 pr-0">
-    <app-produto [produto]="produto" (cancelOperation)="fecharModal()"></app-produto>
+    <app-produto [produto]="produto" operacaoDesejada="CRIACAO" (cancelOperation)="fecharModal()" (produtoChange)="novoProdutoCadastrado($event)"></app-produto>
   </div>
 </ngx-smart-modal>
